media querries reunited at the end

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -32,18 +32,6 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   margin-bottom: -16px;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    font-size: 26px;
-    line-height: 30px;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
-    font-size: 18px;
-    line-height: 21px;
-  }
 }
 
 .p-titles__heading {
@@ -56,21 +44,6 @@
   text-transform: uppercase;
   color: $primary-color;
   margin-bottom: -20px;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    font-size: 48px;
-    line-height: 55px;
-    letter-spacing: 0.04em;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
-    font-size: 34px;
-    line-height: 39px;
-    text-align: center;
-    letter-spacing: 0.04em;
-  }
 }
 
 /** Products drinks grid **/
@@ -79,15 +52,212 @@
   flex-direction: row;
   gap: 32px;
   margin-bottom: 60px;
+}
+
+.products {
+  position: relative;
+
+  .products__image {
+    position: relative;
+  }
+
+  .products__wrapper1 {
+    background-color: #ffb8ca;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    width: 368px;
+    height: 535px;
+    top: 264px;
+    z-index: -1;
+    padding-top: 154px;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+      transition-duration: 0.5s;
+      transition-timing-function: ease-in-out;
+      transition-property: box-shadow;
+    }
+  }
+
+  .products__wrapper2 {
+    background-color: $brown-color;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    width: 368px;
+    height: 535px;
+    top: 264px;
+    z-index: -1;
+    padding-top: 154px;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+      transition-duration: 0.5s;
+      transition-timing-function: ease-in-out;
+      transition-property: box-shadow;
+    }
+  }
+
+  .products__wrapper3 {
+    background-color: $green-color;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    width: 368px;
+    height: 535px;
+    top: 264px;
+    z-index: -1;
+    padding-top: 154px;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+      transition-duration: 0.5s;
+      transition-timing-function: ease-in-out;
+      transition-property: box-shadow;
+    }
+  }
+
+  .products__subtitle {
+    font-family: 'Titan One';
+    font-weight: $font-weight-400;
+    font-size: $font-size-30;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $white-color;
+    margin-bottom: 32px;
+  }
+
+  .products__svg {
+    display: flex;
+    gap: 4px;
+    margin-bottom: 12px;
+  }
+
+  .products__text {
+    width: 240px;
+    font-weight: var(--font-weight-700);
+    font-size: var(--font-size-14);
+    line-height: 176%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: $white-color;
+    margin-bottom: 12px;
+  }
+
+  .products__arrow {
+    background-color: $white-color;
+    border-radius: 50%;
+    align-self: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+
+    &:hover {
+      background-color: $secondary-color;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  /** Products-responsive **/
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    margin-right: 32px;
-    gap: 16px;
+    .p-titles__heading {
+      font-size: 48px;
+      line-height: 55px;
+      letter-spacing: 0.04em;
+    }
+    .p-titles__paragraph {
+      font-size: 26px;
+      line-height: 30px;
+    }
+    .p-grid {
+      margin-right: 32px;
+      gap: 16px;
+    }
+    .products__image {
+      width: 224px;
+      height: 473px;
+      top: -250px;
+      padding-top: 220px;
+    }
+    .products__wrapper1 {
+      width: 224px;
+      height: 473px;
+      top: 250px;
+      z-index: -1;
+      padding-top: 154px;
+      left: 0;
+      right: 0;
+      bottom: 20px;
+      margin: auto;
+    }
+    .products__wrapper2 {
+      width: 224px;
+      height: 473px;
+      top: 250px;
+      z-index: -1;
+      padding-top: 154px;
+      left: 0;
+      right: 0;
+      bottom: 20px;
+      margin: auto;
+    }
+    .products__wrapper3 {
+      width: 224px;
+      height: 473px;
+      top: 250px;
+      z-index: -1;
+      padding-top: 154px;
+      left: 0;
+      right: 0;
+      bottom: 20px;
+      margin: auto;
+    }
+    .products__subtitle {
+      margin-top: -12px;
+      font-size: $font-size-20;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+    }
+    .products__svg {
+      margin-top: -12px;
+      margin-bottom: 0px;
+    }
+    .products__text {
+      width: 160px;
+      height: 150px;
+    }
+    .products__arrow {
+      margin-top: 40px;
+    }
   }
+}
 
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+// For mobile devices
+@media only screen and (max-width: 767px) {
+  .p-titles__heading {
+    font-size: 34px;
+    line-height: 39px;
+    text-align: center;
+    letter-spacing: 0.04em;
+  }
+  .p-titles__paragraph {
+    font-size: 18px;
+    line-height: 21px;
+  }
+  .p-grid {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
@@ -95,246 +265,43 @@
     gap: 455px;
     margin-right: 40px;
   }
-}
 
-.products {
-  position: relative;
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products {
     flex-direction: column;
     align-items: center;
   }
-}
-
-.products__image {
-  position: relative;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    width: 224px;
-    height: 473px;
-    top: -250px;
-    padding-top: 220px;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products__image {
     width: 100%;
     height: auto;
     margin-top: -20px;
   }
-}
-
-.products__wrapper1 {
-  background-color: #ffb8ca;
-  border-radius: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  width: 368px;
-  height: 535px;
-  top: 264px;
-  z-index: -1;
-  padding-top: 154px;
-  cursor: pointer;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    width: 224px;
-    height: 473px;
-    top: 250px;
-    z-index: -1;
-    padding-top: 154px;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    margin: auto;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products__wrapper1 {
     width: 100%;
     height: 535px;
     top: 180px;
     padding-top: 150px;
   }
-
-  &:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
-    transition-property: box-shadow;
-  }
-}
-
-.products__wrapper2 {
-  background-color: $brown-color;
-  border-radius: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  width: 368px;
-  height: 535px;
-  top: 264px;
-  z-index: -1;
-  padding-top: 154px;
-  cursor: pointer;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    width: 224px;
-    height: 473px;
-    top: 250px;
-    z-index: -1;
-    padding-top: 154px;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    margin: auto;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products__wrapper2 {
     width: 100%;
     height: 535px;
     top: 180px;
     padding-top: 150px;
   }
-
-  &:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
-    transition-property: box-shadow;
-  }
-}
-
-.products__wrapper3 {
-  background-color: $green-color;
-  border-radius: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  width: 368px;
-  height: 535px;
-  top: 264px;
-  z-index: -1;
-  padding-top: 154px;
-  cursor: pointer;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    width: 224px;
-    height: 473px;
-    top: 250px;
-    z-index: -1;
-    padding-top: 154px;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    margin: auto;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products__wrapper3 {
     width: 100%;
     height: 535px;
     top: 180px;
     padding-top: 150px;
   }
-
-  &:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in-out;
-    transition-property: box-shadow;
-  }
-}
-
-.products__subtitle {
-  font-family: 'Titan One';
-  font-weight: $font-weight-400;
-  font-size: $font-size-30;
-  line-height: 23px;
-  text-align: center;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: $white-color;
-  margin-bottom: 32px;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    margin-top: -12px;
+  .products__subtitle {
     font-size: $font-size-20;
     line-height: 23px;
     letter-spacing: 0.04em;
   }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
-    font-size: $font-size-20;
-    line-height: 23px;
-    letter-spacing: 0.04em;
-  }
-}
-
-.products__svg {
-  display: flex;
-  gap: 4px;
-  margin-bottom: 12px;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    margin-top: -12px;
-    margin-bottom: 0px;
-  }
-}
-
-.products__text {
-  width: 240px;
-  font-weight: var(--font-weight-700);
-  font-size: var(--font-size-14);
-  line-height: 176%;
-  text-align: center;
-  letter-spacing: 0.04em;
-  color: $white-color;
-  margin-bottom: 12px;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    width: 160px;
-    height: 150px;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products__text {
     font-size: $font-size-16;
   }
-}
-
-.products__arrow {
-  background-color: $white-color;
-  border-radius: 50%;
-  align-self: center;
-  margin-top: 60px;
-  margin-bottom: 60px;
-
-  // For tablets
-  @media only screen and (min-width: 768px) and (max-width: 1279px) {
-    margin-top: 40px;
-  }
-
-  // For mobile devices
-  @media only screen and (max-width: 767px) {
+  .products__arrow {
     margin: 40px;
-  }
-
-  &:hover {
-    background-color: $secondary-color;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
