margins top and bottom solved

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -2,6 +2,26 @@
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+button {
+  border: none;
+}
+a {
+  text-decoration: none;
+}
+p {
+  margin: 0;
+}
+
 .products-unstyled-list {
   list-style: none;
 }
@@ -31,7 +51,7 @@
   line-height: 34px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  margin-bottom: -16px;
+  padding-bottom: 18px;
 }
 
 .p-titles__heading {
@@ -43,7 +63,7 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: $primary-color;
-  margin-bottom: -20px;
+  padding-bottom: 20px;
 }
 
 /** Products drinks grid **/
