--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -12,8 +12,8 @@
             eiusmod tempor incididunt ut labore et
           </p>
           <button class="arrow-button" type="button">
-            <svg class="arrow-button__svg" width="40px" height="40px">
-              <use href="/src/images/sprite.svg#arrow-right"></use>
+            <svg class="arrow-button__svg" width="20px" height="20px">
+              <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
             </svg>
           </button>
         </div>
@@ -28,7 +28,7 @@
           </p>
           <button class="arrow-button" type="button">
             <svg class="arrow-button__svg" width="40px" height="40px">
-              <use href="/src/images/sprite.svg#arrow-right"></use>
+              <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
             </svg>
           </button>
         </div>
@@ -43,7 +43,7 @@
           </p>
           <button class="arrow-button" type="button">
             <svg class="arrow-button__svg" width="40px" height="40px">
-              <use href="/src/images/sprite.svg#arrow-right"></use>
+              <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
             </svg>
           </button>
         </div>
