--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -192,7 +192,8 @@ body {
 }
 
 .made-section {
-  background-image: none;
+  background: url(/src/images/made-background-M-1x.png);
+  background-repeat: no-repeat;
   background-color: #fff5f6;
   font-family: "DM Sans";
   font-style: normal;
@@ -200,6 +201,9 @@ body {
 }
 .made-section__divimage {
   margin-right: 99px;
+}
+.made-section__image {
+  width: 280px;
 }
 .made-section__text {
   font-weight: 500;
@@ -244,7 +248,7 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 320px;
   margin: 0px auto;
   background-color: #fff5f6;
 }
@@ -290,13 +294,47 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    margin: 0px auto;
+    background-color: #fff5f6;
+  }
+  .made-section {
+    background: none;
+    background-color: #fff5f6;
+  }
   .made-section__image {
-    background-image: none;
+    width: 336px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1200px;
+    margin: 0px auto;
+    background-color: #fff5f6;
+  }
   .made-section {
-    background: url(../images/made-background.png);
+    background: url(../images/made-background-1280.png);
+    background-repeat: no-repeat;
+  }
+  .made-section__image {
+    width: 501px;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .made-section {
+    background: url(../images/made-background-M-2x.png);
+    background-repeat: no-repeat;
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .made-section {
+    background: none;
+  }
+}
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
+  .made-section {
+    background: url(../images/made-background-D-2x.png);
     background-repeat: no-repeat;
   }
 }/*# sourceMappingURL=main.css.map */
