--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -16,7 +16,7 @@
             <use href="./images/header/icons.svg#icon-Burger"></use>
           </svg>
         </button> 
-        <button class="header__buy-btn" type="button">
+        <button class="header__buy-btn" type="button" data-modal-open>
           Buy now
           <svg class="header__btn-icon" width="8" height="8">
             <use href="./images/header/icons.svg#icon-btn-arrow"></use>
@@ -77,8 +77,8 @@
           </ul>
             <img
               class="hero__img"
-              srcset="./images/header/header-img.png 1x, ./images/header/header-img@2x.png 2x"
-              src="./images/header/hero-img.png"
+              srcset="./images/header/header-img.png 1x,./images/header/header-img@2x.png 2x"
+              src="./images/header/header-img.png"
               alt="Enjoy icecream"
               width="304"
             />
