desktop images added using before and imbrication

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,7 @@
     <!-- Drinks -->
     <ul class="p-grid products-unstyled-list">
         <li class="products">
-            <img src="/src/images/products-imgs/home-pic1.png" alt="icecream" class="products__image">
+            <div class="products__img-container"></div>
             <div class="products__wrapper1">
                 <h3 class="products__subtitle">ice cream</h3>
                 <div class="products__svg">
@@ -34,7 +34,7 @@
             </div>
         </li>
         <li class="products">
-            <img src="/src/images/products-imgs/home-pic2.png" alt="ice coffe" class="products__image">
+            <div class="products__img-container2"></div>
             <div class="products__wrapper2">
                 <h3 class="products__subtitle">ice coffee</h3>
                 <div class="products__svg">
@@ -57,7 +57,7 @@
             </div>
         </li>
         <li class="products">
-            <img src="/src/images/products-imgs/home-pic3.png" alt="milkshake" class="products__image">
+            <div class="products__img-container3"></div>
             <div class="products__wrapper3">
                 <h3 class="products__subtitle">milkshakes</h3>
                 <div class="products__svg">
