desktop and tablet images and imbrication redone

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -205,60 +205,60 @@ p {
     margin-right: 32px;
     gap: 16px;
   }
-  .products__image {
-    width: 224px;
-    height: 473px;
-    padding-top: 220px;
-  }
-  .products__wrapper1 {
-    width: 224px;
-    height: 473px;
-    top: 250px;
-    z-index: -1;
-    padding-top: 154px;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    margin: auto;
-  }
-  .products__wrapper2 {
-    width: 224px;
-    height: 473px;
-    top: 250px;
-    z-index: -1;
-    padding-top: 154px;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    margin: auto;
-  }
-  .products__wrapper3 {
-    width: 224px;
-    height: 473px;
-    top: 250px;
-    z-index: -1;
-    padding-top: 154px;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    margin: auto;
-  }
-  .products__subtitle {
-    margin-top: -12px;
-    font-size: $font-size-20;
-    line-height: 23px;
-    letter-spacing: 0.04em;
-  }
-  .products__svg {
-    margin-top: -12px;
-    margin-bottom: 0px;
-  }
-  .products__text {
-    width: 160px;
-    height: 150px;
-  }
-  .products__arrow {
-    margin-top: 40px;
+
+  .products {
+    padding-bottom: 20px;
+
+    &__img-container {
+      &::before {
+        content: '';
+        background-image: url('/src/images/products-imgs/home-pic1-tableta.png');
+        width: 224px;
+        height: 224px;
+      }
+
+      &2::before {
+        content: '';
+        background-image: url('/src/images/products-imgs/home-pic2-tableta.png');
+        width: 224px;
+        height: 224px;
+      }
+      &3::before {
+        content: '';
+        background-image: url('/src/images/products-imgs/home-pic3-tableta.png');
+        width: 224px;
+        height: 224px;
+      }
+    }
+
+    &__wrapper1,
+    &__wrapper2,
+    &__wrapper3 {
+      width: 224px;
+      height: 473px;
+      top: 135px;
+    }
+
+    .products__subtitle {
+      margin-top: -12px;
+      font-size: $font-size-20;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+    }
+
+    .products__svg {
+      margin-top: -12px;
+      margin-bottom: 0px;
+    }
+
+    .products__text {
+      width: 160px;
+      height: 150px;
+    }
+
+    .products__arrow {
+      margin-top: 40px;
+    }
   }
 }
 
