--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -17,6 +17,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $secondaryColor;
+    padding-bottom: 32px;
     transition: transform 0.3s;
     &:hover,
     &:focus {
@@ -48,11 +49,12 @@
     background-color: #f0d1a5;
     position: relative;
     margin-bottom: 140px;
-    width: 76%;
-    transition: transform 0.3s;
+    max-width: 440px;
+    transition: transform box-shadow 0.3s;
     &:hover,
     &:focus {
       transform: scale(1.05);
+      box-shadow: 0 8px 30px #f0d1a5;
     }
     &::before {
       content: '';
@@ -68,9 +70,21 @@
     }
     &:first-child {
       background-color: $primaryBackgroundColor;
+      transition: transform box-shadow 0.3s;
+      &:hover,
+      &:focus {
+        transform: scale(1.05);
+        box-shadow: 0 8px 30px $primaryBackgroundColor;
+      }
     }
     &:last-child {
       background-color: #c2e297;
+      transition: transform box-shadow 0.3s;
+      &:hover,
+      &:focus {
+        transform: scale(1.05);
+        box-shadow: 0 8px 30px #c2e297;
+      }
     }
     &:first-child::before {
       content: '';
@@ -169,6 +183,8 @@
     text-align: center;
     letter-spacing: 0.04em;
     color: $whiteColor;
+    margin-right: auto;
+    margin-left: auto;
     width: 200px;
   }
 }
@@ -179,6 +195,9 @@
       gap: 16px;
       flex-direction: row;
       flex-wrap: nowrap;
+    }
+    &__label {
+      padding-bottom: 18px;
     }
     &__title {
       margin-bottom: 158px;
@@ -254,6 +273,7 @@
       font-size: 30px;
       line-height: 1.13;
       letter-spacing: 0.04em;
+      padding-bottom: 16px;
     }
     &__title {
       font-size: 58px;
@@ -339,7 +359,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 60px;
+    gap: 32px;
     padding: 165px 60px 60px;
 
     &__subtitle {
@@ -354,6 +374,7 @@
       line-height: 176%;
       letter-spacing: 0.04em;
       width: 245px;
+      padding-bottom: 28px;
     }
   }
 }
