--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -19,6 +19,7 @@ body {
 .arrow-button {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
   width: 40px;
   height: 40px;
