--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -131,7 +131,7 @@ p {
   }
 
   &__wrapper1 {
-    background-color: #ffb8ca;
+    background-color: $hero-background-color;
   }
 
   &__wrapper2 {
@@ -239,24 +239,19 @@ p {
       top: 135px;
     }
 
-    .products__subtitle {
-      margin-top: -12px;
+    &__subtitle {
+      margin-top: -32px;
       font-size: $font-size-20;
       line-height: 23px;
       letter-spacing: 0.04em;
     }
 
-    .products__svg {
-      margin-top: -12px;
-      margin-bottom: 0px;
-    }
-
-    .products__text {
+    &__text {
       width: 160px;
       height: 150px;
     }
 
-    .products__arrow {
+    &__arrow {
       margin-top: 40px;
     }
   }
@@ -268,61 +263,72 @@ p {
     max-width: 320px;
     margin: 0 auto;
   }
-  .p-titles__heading {
-    font-size: 34px;
-    line-height: 39px;
-    text-align: center;
-    letter-spacing: 0.04em;
-  }
-  .p-titles__paragraph {
-    font-size: 18px;
-    line-height: 21px;
+  .p-titles {
+    &__heading {
+      font-size: 34px;
+      line-height: 39px;
+      text-align: center;
+      letter-spacing: 0.04em;
+    }
+    &__paragraph {
+      font-size: 18px;
+      line-height: 21px;
+    }
   }
   .p-grid {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    gap: 455px;
-    margin-right: 40px;
-  }
+    grid-row-gap: 700px;
 
+    //gap: 625px;
+  }
   .products {
+    display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  .products__image {
-    width: 100%;
-    height: auto;
-    margin-top: -20px;
-  }
-  .products__wrapper1 {
-    width: 100%;
-    height: 535px;
-    top: 180px;
-    padding-top: 150px;
-  }
-  .products__wrapper2 {
-    width: 100%;
-    height: 535px;
-    top: 180px;
-    padding-top: 150px;
-  }
-  .products__wrapper3 {
-    width: 100%;
-    height: 535px;
-    top: 180px;
-    padding-top: 150px;
-  }
-  .products__subtitle {
-    font-size: $font-size-20;
-    line-height: 23px;
-    letter-spacing: 0.04em;
-  }
-  .products__text {
-    font-size: $font-size-16;
-  }
-  .products__arrow {
-    margin: 40px;
+
+    &__img-container {
+      &::before {
+        content: '';
+        background-image: url('/src/images/products-imgs/home-pic1-mobil.png');
+        width: 280px;
+        height: 280px;
+      }
+
+      &2::before {
+        content: '';
+        background-image: url('/src/images/products-imgs/home-pic2-mobil.png');
+        width: 280px;
+        height: 280px;
+      }
+      &3::before {
+        content: '';
+        background-image: url('/src/images/products-imgs/home-pic3-mobil.png');
+        width: 280px;
+        height: 280px;
+      }
+
+      &__wrapper1,
+      &__wrapper2,
+      &__wrapper3 {
+        width: 280px;
+        height: 489px;
+        position: relative;
+        top: 223px;
+        padding-top: 82px;
+
+        &__subtitle {
+          font-size: $font-size-20;
+          line-height: 23px;
+          letter-spacing: 0.04em;
+        }
+
+        &__text {
+          font-size: $font-size-16;
+        }
+      }
+    }
   }
 }
