--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -11,17 +11,7 @@
   background-image: linear-gradient(
     to top,
     $whiteColor 80%,
-    $secondBackgroundColor 30%
-  );
-  padding-bottom: 60px;
-}
-
-.gallery {
-  background-image: linear-gradient(
-    to top,
-    $whiteColor 80%,
-    $secondBackgroundColor 30%
-  );
+    $secondBackgroundColor 30%);
   padding-bottom: 60px;
 }
 
@@ -41,7 +31,6 @@
   // max-width: 100%;
   height: auto;
   padding-right: 3px;
-  mix-blend-mode: multiply;
   &:hover img,
   &:focus img {
     box-shadow: 0px 8px 30px rgba(250, 250, 250, 0.673);
