versiune finala 1 review

--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -1,4 +1,11 @@
 @import 'src/sass/utils/_vars.scss';
+.customer-rev {
+  display: flex;
+    justify-content: center;
+    width: auto; 
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
 .customer-review {
   &__container {
@@ -13,11 +20,12 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    width: 85%;
+    width: 100%;
+    align-items: center;
   }
   &__rev-container {
     width: 90%;
-    padding: 32px 74px 31px 72px;
+    padding: 30px 50px 17px;
     background: #fafafa;
     margin-bottom: 16px;
     position: relative;
@@ -36,14 +44,14 @@
 
     &::before {
       content: '';
-      height: 19%;
-      width: 25%;
-      z-index: -1;
+      height: 23%;
+      width: 28%;
+      z-index: -2;
       background-image: url(../images/quotes.svg);
       background-repeat: no-repeat;
       position: absolute;
       top: 0;
-      left: 0;
+      left: 23px;
     }
 
     &__photo {
@@ -68,7 +76,7 @@
       font-size: 40px;
       position: absolute;
       bottom: 48px;
-      right: 45%;
+      right: 36%;
     }
   }
 }
@@ -76,25 +84,26 @@
 .customer-reviews__line {
   background-image: repeating-linear-gradient(#e1e1e1 0 1px, #fafafa 0 30px);
   position: absolute;
-  top: 74px;
-  left: 20%;
-  width: 57%;
-  height: 72%;
+  top: 75px;
+  left: 21%;
+  width: 60%;
+  height: 67%;
 }
 
 @media screen and (min-width: 768px) {
   .customer-review__rev-container {
-    width: 100%; }
+    width: 620px;
+  }
   
   .customer-reviews__line {
-    width: 75%;
-    height: 50%;
-    left: 12%;
+    width: 87%;
+    height: 40%;
+    left: 7%;
   }
 
   .customer-review__review:before {
-    height: 35%;
-    left: 2%;
+    height: 91%;
+    left: 1%;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -113,7 +122,8 @@
     &__rev-container {
       box-shadow: none;
       transition: box-shadow 150ms $main-transition-timing-function;
-      width: 100%;
+      width: 968px;
+      padding: 32px 74px 31px 72px;
       &:hover,
       &:focus {
         box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
@@ -122,20 +132,14 @@
     &__review {
       font-size: 16px;
       line-height: 186%;
+      padding: 15px 35px 8px;
 
       &::before {
-        left: 0;
         top: 0;
+        left: 0;
         height: 40px;
         width: 54px;
          }
-    }
-
-    &__name-place {
-      &::before {
-        content: '. . .';
-        right: 48%;
-      }
     }
 
     &__photo {
@@ -148,11 +152,11 @@
   }
 
   .customer-reviews__line {
-    width: 84%;
+    width: 85%;
     height: 42%;
     background-image: repeating-linear-gradient(#e1e1e1 0 1px, #fafafa 0 31px);
-    top: 77px;
-    left: 8%;
+    top: 83px;
+    left: 7%;
   }
 }
 
