--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @import './components/products';
 @import './components/gallery';
 @import './components/locations';
+@import './components/locationsModal';
 @import './components/footer';
 
 .container {
