--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="container-footer">
+    <div class=" container container-footer">
         <div class="footer-title">
             <p class="footer-title__subtitle">homemade ice cream made</p>
             <p class="footer-title__subtitle2">with passion</p>
