--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -92,7 +92,7 @@
         </ul>
         <ul class="buttons-list list">
             <li class="buttons-list__item">
-                <button data-modal-open class="buttons-list__location" type="button">Our Locations
+                <button data-modal-open class="location-button buttons-list__location" type="button">Our Locations
                     <svg class="buttons-list__svg" width="12" height="12">
                         <use href="/src/images/icons-svg.svg#icon-btn-arrow1"></use>
                     </svg>
