--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -13,7 +13,12 @@
 }
 
 .locations {
-  background-color: #fff5f6;
+  background: linear-gradient(
+    180deg,
+    rgba(251, 228, 232, 1) 21%,
+    rgba(251, 234, 236, 1) 50%,
+    rgba(255, 245, 246, 1) 100%
+  );
 }
 .title-hidden {
   display: none;
