--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -222,7 +222,8 @@
 	background-color: $secondary-background-color;
     font-family: 'DM Sans';
     font-style: normal;
-    display: flex;
+    
+	// flex-direction: column;
 
 
     &__divimage{
@@ -303,20 +304,15 @@
     &__item{
         font-style: normal;
         text-align: left;
-
-        
     }
 
     &__svg-container{
         display: flex;
         flex-direction: column;
         // align-items: start;
-        
-        
     }
 
     &__svg{
-        // stroke: #2196F3;
         fill: $svg-background;
         width: 33px;
         height: 50px;
@@ -377,6 +373,7 @@
 	.made-section {
 		background: url(../images/made-background-1280.png);
     	background-repeat: no-repeat;
+		display: flex;
 	}
 
 	.made-section__image{
