--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -66,8 +66,8 @@
                             srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x " />
 
                             <source media="screen and (min-width: 1280px)"
-                            srcset="images\made-D-1x.png 1x, images\made-D-2x.png 2x " />
-
+                            srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x " />
+                            
                             <img src="/src/images/made-D-1x.png" alt="cow1">
 
                         </picture>
