--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,7 +12,7 @@
   margin: 0 auto;
   min-width: 320px;
   max-width: 1250px;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 .unstyled-list {
