--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -102,9 +102,9 @@
             </p>
           </div>
           <div class="hero-btn-milk-mod">
-            <button class="hero-btn-milk">
-              <svg class="hero-btn-milk__svg" width="15px" height="20px">
-                <use href="./images/sprite.svg#arrow-right"></use>
+            <button class="arrow-button arrow-button-mod" type="button">
+              <svg class="arrow-button__svg" width="40px" height="40px">
+                <use href="/src/images/sprite.svg#arrow-right"></use>
               </svg>
             </button>
           </div>
