--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -36,13 +36,13 @@
     }
 
 
-.not-visible {
+.buy-modal-is-hidden {
     visibility: hidden; 
-    opacity: initial;
+    opacity: 0;
   }
 
   .modal{position: absolute;}
-
+.buy-modal{
     &__btn {
         width: 30px;
         height: 30px;
@@ -137,7 +137,7 @@
     }
 
     }
-    }
+   
 
 
     &__form {
@@ -202,7 +202,6 @@
     }
 
     }
-    }
 
     ::placeholder{
         color: #ECEBEB;
@@ -232,7 +231,7 @@
         }
     }
 
-}    
+  
 
 
 .buy-modal-is-hidden {
@@ -240,3 +239,4 @@
     opacity: 0;
 }
 
+}
