--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -29,21 +29,20 @@
             ice cream <br />made with <br />
             <span class="hero__title--color-red">passion</span>
           </h1>
-          <ul class="hero__btns">
-            <li><button class="hero__btn" type="button"><a class="hero__link" href="#products">Products</a></button></li>
-            <li>
-              <button class="hero__btn hero__btn--white" type="button">
-                <a class="hero__link hero__link--red" href="#advantages">How it’s made?</a>
-              </button>
-            </li>
-          </ul>
+          <div class="hero__btns">
+          <div>
+              <a class="hero__link" href="#products"><button class="hero__btn" type="button">Products </button></a>
+          </div>
+          <div>
+              <a class="hero__link hero__link--red" href="#advantages"><button class="hero__btn hero__btn--white" type="button">How it’s made?</button></a> 
+          </div>
+        </div>
           <div class="info">
           <img
             class="info__img"
             srcset="./images/header/milk-img.png 1x, ./images/header/milk-img@2x.png 2x"
             src="./images/header/milk-img.png"
             alt="Milk"
-            width="213"
           />
           <div class="info__side">
             <p class="info__text">
@@ -84,7 +83,6 @@
 
          
               alt="Enjoy icecream"
-              width="304"
             />
         </div>
       </section>
