--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -84,4 +84,20 @@
         </ul>
 
     </div>
+    <ul class="contacts-list-btn list list-style">
+        <li class="contacts-list-btn__item">
+            <button class="contacts-list-btn__item-locations btn" type="button">Our Locations
+                <svg class="contacts-list-btn__location-icon">
+                    <use href="./images/sprite.svg#arrow-1"></use>
+                </svg>
+            </button>
+        </li>
+        <li class="contacts-list-btn__item">
+            <button class="contacts-list-btn__item-franchise btn" type="button">Franchise
+                <svg class="contacts-list-btn__franchise-icon">
+                    <use href="./images/sprite.svg#arrow-1"></use>
+                </svg>
+            </button>
+        </li>
+    </ul>
 </section>
