--- a/src/sass/components/_contact-section.scss
+++ b/src/sass/components/_contact-section.scss
@@ -37,7 +37,7 @@
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
     padding: 40px 32px;
-    max-width: 440px;
+    width: 440px;
     margin-right: auto;
     margin-left: auto;
     &:not(:last-child) {
@@ -98,7 +98,7 @@
   }
 }
 
-  @media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .contacts {
     padding-top: 80px;
   }
@@ -147,7 +147,7 @@
   }
 }
 
-@media screen and (min-width:1280px) {
+@media screen and (min-width: 1280px) {
   .contacts {
     padding-top: 120px;
     padding-bottom: 121px;
@@ -160,4 +160,69 @@
   .contacts-list__item-town {
     margin-bottom: 8px;
   }
+}
+//button
+
+.contacts-list-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contacts-list-btn__item {
+  margin-bottom: 10px;
+}
+
+.contacts-list-btn__item-locations {
+  background: #d41342;
+  border-radius: 22px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  padding-left: 17px;
+  padding-right: 17px;
+  width: 162px;
+  height: 44px;
+}
+
+.contacts-list-btn__location-icon {
+  width: 8px;
+  height: 10px;
+  margin-left: 8px;
+  align-items: center;
+  justify-content: center;
+  fill: black;
+}
+
+.contacts-list-btn__item-franchise {
+  background: #ffffff;
+  border-radius: 22px;
+  font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #d41443;
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 161px;
+  height: 44px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
+
+.contacts-list-btn__franchise-icon {
+  width: 8px;
+  height: 10px;
+  margin-left: 8px;
+  align-items: center;
 }
