--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,4 +1,4 @@
-<section class=" locations section">
+<section class=" locations section" id="location">
     <h1 class="title-hidden">Locations</h1>
     <div class="container">
         <ul class="locations-list list">
