--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -51,6 +51,17 @@
     text-transform: uppercase;
     width: 200px;
     color: #d41443;
+    animation: flicker 0.5s ease-in-out infinite alternate;
+    @keyframes flicker {
+      0% {
+        opacity: 1;
+        text-shadow: 10px 10px 10px rgb(216, 76, 123);
+      }
+      100% {
+        opacity: 1;
+        text-shadow: 9px 10px 20px rgb(220, 79, 126);
+      }
+    }
 
     @media screen and (min-width: 768px) {
       width: 340px;
