--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -20,13 +20,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  padding-right: 0px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   border-style: none;
   background-color: $whiteColor;
-  transition: background-color 150ms $main-transition-timing-function;
+  transition: background-color 250ms $main-transition-timing-function;
 }
 
 .arrow-button__svg {
