--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -11,21 +11,10 @@
   background-image: linear-gradient(
     to top,
     $whiteColor 80%,
-    $secondBackgroundColor 30%);
+    $secondBackgroundColor 30%
+  );
   padding-bottom: 60px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 .gallery__grid {
   display: flex;
@@ -83,8 +72,6 @@
   .gallery__fourth-item {
     padding-top: 50px;
   }
-}
-}
 }
 
 @media screen and (min-width: 1280px) {
