--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -4,8 +4,10 @@
   flex-direction: column;
   padding-top: 60px;
   padding-bottom: 60px;
+  align-items: center;
 }
 .products {
+  display: flex;
   padding-left: 20px;
   padding-right: 20px;
 
@@ -18,8 +20,7 @@
     text-transform: uppercase;
     color: $secondaryColor;
     padding-bottom: 32px;
-    transition: transform 0.3s;
-    &:hover,
+    transition: transform 250ms $main-transition-timing-function;
     &:focus {
       transform: scale(1.25);
     }
@@ -33,8 +34,7 @@
     text-transform: uppercase;
     color: $primaryColor;
     margin-bottom: 148px;
-    transition: transform, 0.3s;
-    &:hover,
+    transition: transform, 250ms $main-transition-timing-function;
     &:focus {
       transform: scale(1.25);
     }
@@ -42,19 +42,16 @@
   &__list {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    gap: 140px;
   }
   &__list-item {
     border-radius: 24px;
     background-color: #f0d1a5;
     position: relative;
-    margin-bottom: 140px;
     max-width: 440px;
-    transition: transform box-shadow 0.3s;
-    &:hover,
+    transition: transform 250ms $main-transition-timing-function;
     &:focus {
       transform: scale(1.05);
-      box-shadow: 0 8px 30px #f0d1a5;
     }
     &::before {
       content: '';
@@ -70,20 +67,16 @@
     }
     &:first-child {
       background-color: $primaryBackgroundColor;
-      transition: transform box-shadow 0.3s;
-      &:hover,
+      transition: transform 250ms $main-transition-timing-function;
       &:focus {
         transform: scale(1.05);
-        box-shadow: 0 8px 30px $primaryBackgroundColor;
       }
     }
     &:last-child {
       background-color: #c2e297;
-      transition: transform box-shadow 0.3s;
-      &:hover,
+      transition: transform 250ms $main-transition-timing-function;
       &:focus {
         transform: scale(1.05);
-        box-shadow: 0 8px 30px #c2e297;
       }
     }
     &:first-child::before {
@@ -96,7 +89,6 @@
       background-position: center;
       position: absolute;
       transform: translateY(-50%);
-      top: 0;
     }
     &:last-child::before {
       content: '';
@@ -145,7 +137,6 @@
   gap: 32px;
   padding: 160px 40px 40px;
   transition: transform 0.3s;
-  &:hover,
   &:focus {
     transform: scale(1.05);
   }
@@ -194,17 +185,31 @@
     &__list {
       gap: 16px;
       flex-direction: row;
-      flex-wrap: nowrap;
     }
     &__label {
       padding-bottom: 18px;
+      transition: transform 250ms $main-transition-timing-function;
+      &:hover,
+      &:focus {
+        transform: scale(1.25);
+      }
     }
     &__title {
       margin-bottom: 158px;
+      transition: transform 250ms $main-transition-timing-function;
+      &:hover,
+      &:focus {
+        transform: scale(1.25);
+      }
     }
     &__list-item {
       width: auto;
-      margin-bottom: 0px;
+      transition: transform box-shadow 250ms $main-transition-timing-function;
+      &:hover,
+      &:focus {
+        transform: scale(1.05);
+        box-shadow: 0 8px 30px #f0d1a5;
+      }
       &::before {
         content: '';
         display: block;
@@ -216,12 +221,28 @@
         transform: translateY(-60%);
         top: 0;
       }
+      &:first-child {
+        transition: transform box-shadow 250ms $main-transition-timing-function;
+        &:hover,
+        &:focus {
+          transform: scale(1.05);
+          box-shadow: 0 8px 30px $primaryBackgroundColor;
+        }
+      }
       &:first-child::before {
         display: block;
         width: 100%;
         height: 224px;
         transform: translateY(-60%);
         background-image: url(/src/images/icecream-t.png);
+      }
+      &:last-child {
+        transition: transform box-shadow 250ms $main-transition-timing-function;
+        &:hover,
+        &:focus {
+          transform: scale(1.05);
+          box-shadow: 0 8px 30px #c2e297;
+        }
       }
       &:last-child::before {
         display: block;
@@ -231,41 +252,49 @@
         background-image: url(/src/images/milkshakes-t.png);
       }
     }
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .products__list-item:first-child::before {
-      background-image: url(/src/images/icecream-t@x2.png);
-      background-size: 224px 224px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .products__list-item:first-child::before {
+        background-image: url(/src/images/icecream-t@x2.png);
+        background-size: 224px 224px;
+      }
     }
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .products__list-item::before {
-      background-image: url(/src/images/icecoffe-t@x2.png);
-      background-size: 224px 224px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .products__list-item::before {
+        background-image: url(/src/images/icecoffe-t@x2.png);
+        background-size: 224px 224px;
+      }
     }
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .products__list-item:last-child:before {
-      background-image: url(/src/images/milkshakes-t@x2.png);
-      background-size: 224px 224px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .products__list-item:last-child:before {
+        background-image: url(/src/images/milkshakes-t@x2.png);
+        background-size: 224px 224px;
+      }
     }
-  }
-  .products-cards {
-    gap: 32px;
-    padding: 118px 32px 40px;
-    &__description {
-      font-size: 14px;
-      width: 160px;
+    .products-cards {
+      gap: 32px;
+      padding: 118px 32px 40px;
+      transition: transform 250ms $main-transition-timing-function;
+      &:hover,
+      &:focus {
+        transform: scale(1.05);
+      }
+      &__description {
+        font-size: 14px;
+        width: 160px;
+      }
     }
   }
 }
 @media screen and (min-width: 1280px) {
+  .container--modif {
+    align-items: normal;
+  }
   .products {
     padding-left: 16px;
     padding-right: 16px;
@@ -279,7 +308,7 @@
       font-size: 58px;
       line-height: 1.13;
       letter-spacing: 0.06em;
-      margin-bottom: 260px;
+      margin-bottom: 280px;
       margin-top: 0;
     }
     &__list {
@@ -301,7 +330,7 @@
         background-position: center;
         position: absolute;
         transform: translateY(-60%);
-        top: 0;
+        top: -32px;
       }
       &:first-child {
         background-color: $primaryBackgroundColor;
@@ -319,7 +348,6 @@
         background-position: center;
         position: absolute;
         transform: translateY(-60%);
-        top: 0;
       }
       &:last-child::before {
         content: '';
@@ -330,51 +358,50 @@
         background-image: url(/src/images/milkshakes-d.png);
       }
     }
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .products__list-item:first-child::before {
-      background-image: url(/src/images/icecream-d@x2.png);
-      background-size: 368px 394px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .products__list-item:first-child::before {
+        background-image: url(/src/images/icecream-d@x2.png);
+        background-size: 368px 394px;
+      }
     }
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .products__list-item::before {
-      background-image: url(/src/images/icecoffe-d@x2.png);
-      background-size: 368px 394px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .products__list-item::before {
+        background-image: url(/src/images/icecoffe-d@x2.png);
+        background-size: 368px 394px;
+      }
     }
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    .products__list-item:last-child:before {
-      background-image: url(/src/images/milkshakes-d@x2.png);
-      background-size: 368px 394px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .products__list-item:last-child:before {
+        background-image: url(/src/images/milkshakes-d@x2.png);
+        background-size: 368px 394px;
+      }
     }
-  }
-  .products-cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 32px;
-    padding: 165px 60px 60px;
-
-    &__subtitle {
-      font-size: 30px;
-      line-height: 1.13;
-      text-align: center;
-      letter-spacing: 0.04em;
-    }
-    &__description {
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 176%;
-      letter-spacing: 0.04em;
-      width: 245px;
-      padding-bottom: 28px;
+    .products-cards {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 32px;
+      padding: 165px 60px 60px;
+      &__subtitle {
+        font-size: 30px;
+        line-height: 1.13;
+        text-align: center;
+        letter-spacing: 0.04em;
+      }
+      &__description {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 176%;
+        letter-spacing: 0.04em;
+        width: 100%;
+        padding-bottom: 28px;
+      }
     }
   }
 }
