--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -280,14 +280,14 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    grid-row-gap: 700px;
-
-    //gap: 625px;
+    grid-row-gap: 635px;
   }
+
   .products {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 
     &__img-container {
       &::before {
@@ -309,26 +309,26 @@ p {
         width: 280px;
         height: 280px;
       }
+    }
 
-      &__wrapper1,
-      &__wrapper2,
-      &__wrapper3 {
-        width: 280px;
-        height: 489px;
-        position: relative;
-        top: 223px;
-        padding-top: 82px;
+    &__wrapper1,
+    &__wrapper2,
+    &__wrapper3 {
+      width: 280px;
+      height: 489px;
+      position: static;
+      position: absolute;
+      top: 145px;
+    }
 
-        &__subtitle {
-          font-size: $font-size-20;
-          line-height: 23px;
-          letter-spacing: 0.04em;
-        }
+    &__subtitle {
+      font-size: $font-size-20;
+      line-height: 23px;
+      letter-spacing: 0.04em;
+    }
 
-        &__text {
-          font-size: $font-size-16;
-        }
-      }
+    &__text {
+      font-size: $font-size-16;
     }
   }
 }
