--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -84,18 +84,18 @@
         </ul>
 
     </div>
-    <ul class="contacts-list-btn list list-style">
+    <ul class="contacts-list-btn list-style">
         <li class="contacts-list-btn__item">
-            <button class="contacts-list-btn__item-locations btn" type="button">Our Locations
-                <svg class="contacts-list-btn__location-icon">
-                    <use href="./images/sprite.svg#arrow-1"></use>
+            <button class="contacts-list-btn__item-locations" type="button">Our Locations
+                <svg class="about__content-icon ">
+                    <use href="./images/sprite.svg#icon-Vector-1"></use>
                 </svg>
             </button>
         </li>
         <li class="contacts-list-btn__item">
-            <button class="contacts-list-btn__item-franchise btn" type="button">Franchise
-                <svg class="contacts-list-btn__franchise-icon">
-                    <use href="./images/sprite.svg#arrow-1"></use>
+            <button class="contacts-list-btn__item-franchise" type="button">Franchise
+                <svg class="about__content-icon">
+                    <use href="./images/sprite.svg#icon-Vector-1"></use>
                 </svg>
             </button>
         </li>
