--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -88,7 +88,11 @@
 }
 
 //Tablet
-
+@media screen and (max-width: 767px) {
+  .footer:after {
+    bottom: 60px;
+  }
+}
 @media screen and (min-width: 768px) {
   .footer::after {
     bottom: 40px;
