added photos according to resolution

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -59,7 +59,7 @@ ul {
       top: 2100px;
       width: 280px;
       height: 280px;
-      background-image: url(/src/images/products/icecoffee.png);
+      background-image: url(/src/images/products/icecoffee-m.png);
       background-size: 280px 280px;
     }
   }
@@ -72,7 +72,7 @@ ul {
       top: 2800px;
       width: 280px;
       height: 280px;
-      background-image: url(/src/images/products/milkshake.png);
+      background-image: url(/src/images/products/milkshake-m.png);
       background-size: 280px 280px;
     }
   }
@@ -82,7 +82,7 @@ ul {
     top: 1400px;
     width: 280px;
     height: 280px;
-    background-image: url(/src/images/products/icecream.png);
+    background-image: url(/src/images/products/icrecream-m.png);
     background-size: 280px 280px;
   }
   &:hover {
@@ -191,6 +191,27 @@ ul {
   margin-left: 5px;
   bottom: 380px;
 }
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .products__item {
+    &::before {
+      background-image: url(/src/images/products/icecream-m-2x.png);
+    }
+    &:nth-child(2) {
+      &::before {
+        background-image: url(/src/images/products/icecoffee-m-2x.png);
+      }
+    }
+    &:nth-child(3) {
+      &::before {
+        background-image: url(/src/images/products/milkshake-m-2x.png);
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 768px) {
   .products-section-container {
     width: 768px;
@@ -210,20 +231,20 @@ ul {
     &::before {
       content: '';
       position: absolute;
-      top: 1400px;
+      top: 1420px;
       width: 224px;
       height: 224px;
-      background-image: url(/src/images/products/icecream.png);
+      background-image: url(/src/images/products/icecream-t.png);
       background-size: 224px 224px;
     }
     &:nth-child(2) {
       &::before {
         content: '';
         position: absolute;
-        top: 1400px;
+        top: 1420px;
         width: 224px;
         height: 224px;
-        background-image: url(/src/images/products/icecoffee.png);
+        background-image: url(/src/images/products/icecoffee-t.png);
         background-size: 224px 224px;
       }
     }
@@ -231,10 +252,10 @@ ul {
       &::before {
         content: '';
         position: absolute;
-        top: 1400px;
+        top: 1420px;
         width: 224px;
         height: 224px;
-        background-image: url(/src/images/products/milkshake.png);
+        background-image: url(/src/images/products/milkshake-t.png);
         background-size: 224px 224px;
       }
     }
@@ -274,6 +295,25 @@ ul {
   }
   .products__list {
     margin-bottom: 70px;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .products__item {
+      &::before {
+        background-image: url(/src/images/products/icecream-t-2x.png);
+      }
+      &:nth-child(2) {
+        &::before {
+          background-image: url(/src/images/products/icecoffee-t-2x.png);
+        }
+      }
+      &:nth-child(3) {
+        &::before {
+          background-image: url(/src/images/products/milkshake-t-2x.png);
+        }
+      }
+    }
   }
 }
 @media screen and (min-width: 1200px) {
@@ -357,5 +397,24 @@ ul {
   }
   .products__type {
     padding-top: 150px;
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .products__item {
+      &::before {
+        background-image: url(/src/images/products/icecream-2x.png);
+      }
+      &:nth-child(2) {
+        &::before {
+          background-image: url(/src/images/products/icecoffee-2x.png);
+        }
+      }
+      &:nth-child(3) {
+        &::before {
+          background-image: url(/src/images/products/milkshake-2x.png);
+        }
+      }
+    }
   }
 }
