--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -1,5 +1,6 @@
 <section class="contacts">
     <div class="container">
+        <h2 class="hidden-title">Our contacts</h2>
         <ul class="contacts-list list-style">
             <li class="contacts-list__item">
                 <p class="contacts-list__item-product contacts-list__item-cafe">CAFE</p>
