--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,86 +11,87 @@
     />
   </head> -->
 <div class="products-section-container">
-  <section class="products"></section>
-  <p class="products__subtitle">100% natural</p>
-  <h2 class="products__title">Products</h2>
-  <ul class="products__list">
-    <li class="products__item">
-      <h3 class="products__type">Ice cream</h3>
-      <div class="points"></div>
-      <p class="products__information">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
-      </p>
-      <button
-        type="button"
-        class="products__button"
-        onclick="showOverlay('overlay1')"
-      >
-        <svg class="products__svg">
-          <use xlink:href="./images/products.svg#arrow-right"></use>
-        </svg>
-      </button>
-      <div id="overlay1" class="products__description">
-        <p class="overlay__description">
+  <section class="products">
+    <p class="products__subtitle">100% natural</p>
+    <h2 class="products__title">Products</h2>
+    <ul class="products__list">
+      <li class="products__item">
+        <h3 class="products__type">Ice cream</h3>
+        <div class="points"></div>
+        <p class="products__information">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          eiusmod tempor incididunt ut labore et
         </p>
-      </div>
-    </li>
-    <li class="products__item">
-      <h3 class="products__type">Ice coffee</h3>
-      <div class="points"></div>
-      <p class="products__information">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
-      </p>
-      <button
-        type="button"
-        class="products__button"
-        onclick="showOverlay('overlay2')"
-      >
-        <svg class="products__svg">
-          <use xlink:href="./images/products.svg#arrow-right"></use>
-        </svg>
-      </button>
-      <div id="overlay2" class="products__description">
-        <p class="overlay__description">
+        <button
+          type="button"
+          class="products__button"
+          onclick="showOverlay('overlay1')"
+        >
+          <svg class="products__svg">
+            <use xlink:href="./images/products.svg#arrow-right"></use>
+          </svg>
+        </button>
+        <div id="overlay1" class="products__description">
+          <p class="overlay__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </li>
+      <li class="products__item">
+        <h3 class="products__type">Ice coffee</h3>
+        <div class="points"></div>
+        <p class="products__information">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          eiusmod tempor incididunt ut labore et
         </p>
-      </div>
-    </li>
-    <li class="products__item">
-      <h3 class="products__type">Milkshakes</h3>
-      <div class="points"></div>
-      <p class="products__information">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
-      </p>
-      <button
-        type="button"
-        class="products__button"
-        onclick="showOverlay('overlay3')"
-      >
-        <svg class="products__svg">
-          <use xlink:href="./images/products.svg#arrow-right"></use>
-        </svg>
-      </button>
-      <div id="overlay3" class="products__description">
-        <p class="overlay__description">
+        <button
+          type="button"
+          class="products__button"
+          onclick="showOverlay('overlay2')"
+        >
+          <svg class="products__svg">
+            <use xlink:href="./images/products.svg#arrow-right"></use>
+          </svg>
+        </button>
+        <div id="overlay2" class="products__description">
+          <p class="overlay__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </li>
+      <li class="products__item">
+        <h3 class="products__type">Milkshakes</h3>
+        <div class="points"></div>
+        <p class="products__information">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          eiusmod tempor incididunt ut labore et
         </p>
-      </div>
-    </li>
-  </ul>
+        <button
+          type="button"
+          class="products__button"
+          onclick="showOverlay('overlay3')"
+        >
+          <svg class="products__svg">
+            <use xlink:href="./images/products.svg#arrow-right"></use>
+          </svg>
+        </button>
+        <div id="overlay3" class="products__description">
+          <p class="overlay__description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </section>
 </div>
 <!-- <script src="./js/products.js"></script> -->
 <!-- </html> -->
